// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Apartment renders component correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item"
    href="#"
    onClick={[MockFunction]}
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;

exports[`Town renders component correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item"
    href="#"
    onClick={[MockFunction]}
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;

exports[`Town renders component correctly with active town 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
    onClick={[MockFunction]}
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;
